[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CsabaK", email = "898182+iexa@users.noreply.github.com"},
]
dependencies = [
    "ipykernel>=6.11.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
