[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CsabaK", email = "898182+iexa@users.noreply.github.com"},
]
dependencies = [
    "pygame>=2.1.2",
    "customtkinter>=5.0.3",
    "openai>=0.26.1",
    "async-tkinter-loop>=0.7.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.17.4",
]

[tool.pdm.scripts]
asteroids = "python asteroids"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
